force-app/main/default/objects/AI_Server_Job__c/AI_Server_Job__c.object-meta.xml
<CustomObject>
    <label>AI Server Job</label>
    <nameField>
        <displayFormat>AIJ-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Server Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>