force-app/main/default/objects/AI_Server_Job__c/fields/Client_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Client_Fingerprint__c</fullName>
    <label>Client Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>