force-app/main/default/objects/AI_Server_Job__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <externalId>true</externalId>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>