force-app/main/default/objects/AI_Server_Job__c/fields/Logs__c.field-meta.xml
<CustomField>
    <fullName>Logs__c</fullName>
    <label>Logs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>