force-app/main/default/objects/AI_Server_Job__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AI Server Jobs (EEDL)</relationshipLabel>
    <relationshipName>AI_Server_Jobs_EEDL</relationshipName>
    <type>Lookup</type>
</CustomField>