force-app/main/default/objects/AI_Server_Job__c/fields/Progress_Details__c.field-meta.xml
<CustomField>
    <fullName>Progress_Details__c</fullName>
    <label>Progress Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>