force-app/main/default/objects/AI_Server_Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>